fix: actionのアドレス

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <button type="submit">Go!</button>
 </form>
-<form id="comment-form" method="post" action="https://api.staticman.net/v1/entry/{{ site.repository }}/{{ site.staticman.branch }}">
+<form id="comment-form" method="post" action="https://api.staticman.net/v1/entry/multipotnomad/multipotnomad.github.io">
   <fieldset>
     <label for="comment-form-message">Comment</label>
     <textarea type="text" rows="3" id="comment-form-message" name="fields[message]" tabindex="1"></textarea>
