--- a/index.html
+++ b/index.html
@@ -12,44 +12,16 @@
   </header>
 <p>かきくけこ</p>
 <!-- comments ----------------------------------------------------------------->
-<!-- <form method="POST" action="https://api.staticman.net/v2/entry/multipotnomad/multipotnomad.github.io/master/comments"> -->
-  <input name="options[redirect]" type="hidden" value="https://my-site.com">
+<form method="POST" action="https://api.staticman.net/v2/entry/multipotnomad/multipotnomad.github.io/master/comments">
+  <!-- <input name="options[redirect]" type="hidden" value="https://my-site.com"> -->
   <!-- e.g. "2016-01-02-this-is-a-post" -->
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <!-- <input name="options[slug]" type="hidden" value="{{ page.slug }}"> -->
   <label><input name="fields[name]" type="text">Name</label>
   <label><input name="fields[email]" type="email">E-mail</label>
   <label><textarea name="fields[message]"></textarea>Message</label>
 
   <button type="submit">Go!</button>
 </form>
-<form id="comment-form" method="post" action="https://api.staticman.net/v1/entry/multipotnomad/multipotnomad.github.io">
-  <fieldset>
-    <label for="comment-form-message">Comment</label>
-    <textarea type="text" rows="3" id="comment-form-message" name="fields[message]" tabindex="1"></textarea>
-  </fieldset>
-  <fieldset>
-    <label for="comment-form-name">Name</label>
-    <input type="text" id="comment-form-name" name="fields[name]" tabindex="2" />
-  </fieldset>
-  <fieldset>
-    <label for="comment-form-email">Email address</label>
-    <input type="email" id="comment-form-email" name="fields[email]" tabindex="3" />
-  </fieldset>
-  <fieldset>
-    <label for="comment-form-url">Website</label>
-    <input type="url" id="comment-form-url" name="fields[url]" tabindex="4"/>
-  </fieldset>
-  <fieldset class="hidden" style="display:none;">
-    <!-- used by Staticman to generate filenames for each comment -->
-    <input type="hidden" name="options[slug]" value="{{ page.slug }}">
-    <!-- honey pot field used to filter out spam -->
-    <label for="comment-form-location">Not used. Leave blank if you are a human.</label>
-    <input type="text" id="comment-form-location" name="fields[hidden]" autocomplete="off"/>
-  </fieldset>
-  <fieldset>
-    <button type="submit" id="comment-form-submit" tabindex="5">Submit Comment</button>
-  </fieldset>
-</form>
-<!-- End new comment form -->
+
 </body>
 </html>
