--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
   </header>
 <p>かきくけこ</p>
 <!-- comments ----------------------------------------------------------------->
+<div class="comments__existing js-comments" >
+			<h2 class="comments__heading heading-2">Comments</h2>
+
+
+				<article id="comment1" class="js-comment comment">
+					<div class="comment__avatar-wrapper">
+						<img class="comment__avatar" src="">
+					</div>
+					<div class="comment__content-wrapper">
+						<h3 class="comment__author"></h3>
+						<p class="comment__date">
+							<a href="#comment1">
+							</a>
+						</p>
+						<div class="comment__body">
+						</div>
+					</div>
+				</article>
+
+		</div>
 <form method="POST" action="https://api.staticman.net/v2/entry/multipotnomad/multipotnomad.github.io/master/comments">
   <!-- <input name="options[redirect]" type="hidden" value="https://my-site.com"> -->
   <!-- e.g. "2016-01-02-this-is-a-post" -->
