--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: post
 title: テスト
 excerpt: オーストラリア留学でフリスビーをやったら楽しかったよ
 keywords: 留学、オーストラリア、フリスビー、Australian University Games
+comments: true
 ---
 <nav class="site-nav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
